# sol_trainer

./: .gitignore  README.md  pyproject.toml
sol_trainer/: constants.py  infer.py  layers.py  load.py  load2.py  loss.py  models.py  os_utils.py  prepare.py  save.py  scale.py  std_module.py  train.py  utils.py
sol_trainer/hyperparameters/: __init__.py  capacity.py  hyperparameters.py
sol_trainer/parse/: parse.py  parse_cmd.py
tests/: test_misordered_feats.py  test_scale.py  test_sol_trainer.py  utils_test.py
